--- a/templates/sheets/partials/equipment.hbs
+++ b/templates/sheets/partials/equipment.hbs
@@ -1,7 +1,7 @@
 <div class="equipment-tab">
     <div class="title-line">
         {{#if unlocked}}
-        <a class="item-create right-icon" data-type="equipment" title="{{localize 'CLEENMAIN.equipment.add'}}"><i
+        <a class="item-create right-icon" data-action="itemCreate" data-type="equipment" title="{{localize 'CLEENMAIN.equipment.add'}}"><i
                 class="fas fa-plus"></i></a>
         {{/if}}
     </div>
@@ -17,19 +17,19 @@
                 <div class="equipment-name">{{item.name}}</div>
                 <div class="icon-group">
                     {{#ife item.system.state "active"}}
-                    <a class="item-state" title="{{localize 'CLEENMAIN.equipment.active'}}"><i
+                    <a data-action="itemState" data-item-id="{{_id}}" title="{{localize 'CLEENMAIN.equipment.active'}}"><i
                             class="fas fa-hand"></i></a>
                     {{else ife item.system.state "equipped"}}
-                    <a class="item-state" title="{{localize 'CLEENMAIN.equipment.equipped'}}"><i
+                    <a data-action="itemState" data-item-id="{{_id}}" title="{{localize 'CLEENMAIN.equipment.equipped'}}"><i
                             class="fas fa-backpack"></i></a>
                     {{else}}
-                    <a class="item-state" title="{{localize 'CLEENMAIN.equipment.other'}}"><i
+                    <a data-action="itemState" data-item-id="{{_id}}" title="{{localize 'CLEENMAIN.equipment.other'}}"><i
                             class="fas fa-house"></i></a>
                     {{/ife}}
-                    <a class="item-open-sheet" data-type="equipment" title="{{localize 'CLEENMAIN.sheet.edit'}}"><i
+                    <a data-action="itemEdit" data-item-id="{{item._id}}" data-type="equipment" title="{{localize 'CLEENMAIN.sheet.edit'}}"><i
                             class="fas fa-pen"></i></a>
                     {{#if ../unlocked}}
-                    <a class="inline-delete" data-type="equipment" title="{{localize 'CLEENMAIN.sheet.delete'}}"><i
+                    <a data-action="itemDelete" data-item-id="{{item._id}}" data-type="equipment" title="{{localize 'CLEENMAIN.sheet.delete'}}"><i
                             class="fas fa-trash"></i></a>
                     {{/if}}
                 </div>
