--- a/less/npc-sheet.less
+++ b/less/npc-sheet.less
@@ -1,161 +1,164 @@
 .cleenmain.sheet.npc {
-  h1 {
-    font: @h1-font;
-    color: @title-color;
-    text-transform: @h1-text-transform;
-    border: @h1-border;
-  }
-  h2 {
-    font: @h2-font;
-    color: @title-color;
-  }
-  .input-short {
-    width: 2em;
-  }
-  .input-verylong {
-    width: 20em;
-  }
-  .input-long {
-    width: 10em;
-  }
   .window-content {
+    h2 {
+      font: @h2-font;
+      color: @title-color;
+    }
+    .input-short {
+      width: 2em;
+    }
+    .input-verylong {
+      width: 20em;
+    }
+    .input-long {
+      width: 10em;
+    }
     background: @npcsheet-background;
     background-color: @clear-background;
     font: @default-font;
-  }
-  .editor {
-    height: 100%;
-    width: 100%;
-    background: @edit-background;
-    box-shadow: inset 0 0 6px black;
-  }
-  input {
-    background-color: @edit-background;
-    box-shadow: inset 0 0 3px black;
-    color: @core-main-color;
-  }
-  input:focus {
-    background-color: @editactive-background;
-  }
-  select {
-    background-color: @edit-background;
-    box-shadow: inset 0 0 3px black;
-    height: 1.5em;
-    color: @core-main-color;
-  }
-  .npc-main {
-    display: flex;
-    flex-direction: column;
-    .npcstat-block {
+    h1 {
+      font: @h1-font;
+      color: @title-color;
+      text-transform: @h1-text-transform;
+      border: @h1-border;
+    }
+    .editor {
+      height: 100%;
+      width: 100%;
+      background: @edit-background;
+      box-shadow: inset 0 0 6px black;
+    }
+    input {
+      background-color: @edit-background;
+      box-shadow: inset 0 0 3px black;
+      color: @core-main-color;
+    }
+    input:focus {
+      background-color: @editactive-background;
+    }
+    select {
+      background-color: @edit-background;
+      box-shadow: inset 0 0 3px black;
+      height: 1.5em;
+      color: @core-main-color;
+    }
+    .checkbox {
+      height: 1em;
+    }
+    .npc-main {
       display: flex;
-      flex-direction: row;
-      .npcstat-block-left {
+      flex-direction: column;
+      .npcstat-block {
         display: flex;
-        flex-direction: column;
-        flex-basis: 70%;
-        .name-line {
-          margin: 0.5em;
+        flex-direction: row;
+        .npcstat-block-left {
           display: flex;
-          flex-direction: row;
-          .name-text {
-            font: @npc-name-font;
-            color: @npc-name-color;
-          }
-          input {
-            height: 2em;
-          }
-          .sheet-change-lock {
-            margin-left: auto;
-            padding-left: 1em;
-            color: @icon-color;
-          }
-        }
-        .activity-line {
-          margin: 0 0.5em 1em 1em;
-          .activity-text {
-            font: @npc-activity-font;
-            color: @npc-name-color;
-          }
-        }
-        .level-line {
-          display: flex;
-          flex-direction: row;
-          select {
-            margin: 0.5em 0.5em;
-            width: 12em;
-            height: auto;
-          }
-        }
-        .weapons {
-          .weapon-line {
+          flex-direction: column;
+          flex-basis: 70%;
+          .name-line {
+            margin: 0.5em;
             display: flex;
             flex-direction: row;
-            margin: 0.5em 0.5em;
-            font: @npc-combat-line-font;
-            color: @npc-combat-line-font-color;
-            .line-label {
-              font-weight: bold;
+            .name-text {
+              font: @npc-name-font;
+              color: @npc-name-color;
             }
-            .weapon-el {
-              margin: 0 0 0 1rem;
+            input {
+              height: 2em;
             }
-            .item-create {
-              padding-left: 0.5em;
+            .sheet-change-lock {
+              margin-left: auto;
+              padding-left: 1em;
               color: @icon-color;
             }
           }
-        }
-        .skills {
-          .skill-line {
-            font: @npc-skill-font;
-            color: @npc-skill-font-color;
+          .activity-line {
+            margin: 0 0.5em 1em 1em;
+            .activity-text {
+              font: @npc-activity-font;
+              color: @npc-name-color;
+            }
+          }
+          .level-line {
             display: flex;
             flex-direction: row;
-            flex-wrap: wrap;
-            .skill-block {
+            select {
+              margin: 0.5em 0.5em;
+              width: 12em;
+              height: auto;
+            }
+          }
+          .weapons {
+            .weapon-line {
               display: flex;
               flex-direction: row;
-              padding: 0.5em 0.5em;
-              .skill-label {
+              margin: 0.5em 0.5em;
+              font: @npc-combat-line-font;
+              color: @npc-combat-line-font-color;
+              .line-label {
                 font-weight: bold;
               }
-              .skill-value {
-                display: flex;
-                flex-direction: row;
-                padding: 0 0.2em 0 0.2em;
+              .weapon-el {
+                margin: 0 0 0 1rem;
               }
-              .skill-nonedit {
-                width: 25%;
-              }
-              .skill-edit {
-                width: 50%;
+              .item-create {
+                padding-left: 0.5em;
+                color: @icon-color;
               }
             }
           }
-        }
-        .npchealth-line {
-          display: flex;
-          flex-direction: row;
-          margin: 1rem;
-          font: @npc-health-font;
-          .central-text {
-            margin: 0 0.2em 0 0.1em;
+          .skills {
+            .skill-line {
+              font: @npc-skill-font;
+              color: @npc-skill-font-color;
+              display: flex;
+              flex-direction: row;
+              flex-wrap: wrap;
+              .skill-block {
+                display: flex;
+                flex-direction: row;
+                padding: 0.5em 0.5em;
+                .skill-label {
+                  font-weight: bold;
+                }
+                .skill-value {
+                  display: flex;
+                  flex-direction: row;
+                  padding: 0 0.2em 0 0.2em;
+                }
+                .skill-nonedit {
+                  width: 25%;
+                }
+                .skill-edit {
+                  width: 50%;
+                }
+              }
+            }
           }
-          input {
-            padding-bottom: 0.2rem;
-          }
-          .health-block {
+          .npchealth-line {
             display: flex;
             flex-direction: row;
-            margin-left: 1em;
+            margin: 1rem;
+            font: @npc-health-font;
+            .central-text {
+              margin: 0 0.2em 0 0.1em;
+            }
+            input {
+              padding-bottom: 0.2rem;
+            }
+            .health-block {
+              display: flex;
+              flex-direction: row;
+              margin-left: 1em;
+            }
           }
         }
-      }
-      .npcstat-block-right {
-        flex-basis: 30%;
-        width: 200px;
-        height: 200px;
-        object-fit: contain;
+        .npcstat-block-right {
+          flex-basis: 30%;
+          width: 200px;
+          height: 200px;
+          object-fit: contain;
+        }
       }
     }
   }
