--- a/less/player-sheet.less
+++ b/less/player-sheet.less
@@ -1,48 +1,51 @@
 .cleenmain.sheet.player {
-  h1 {
-    font: @h1-font;
-    color: @h1-color;
-    text-transform: @h1-text-transform;
-    border: @h1-border;
-  }
-  h2 {
-    font: @h2-font;
-    color: @h2-color;
-  }
+  button{
+    color: black;}
   .window-content {
     background: @playersheet-background;
     background-color: @clear-background;
     font: @default-font;
+    h1 {
+      font: @h1-font;
+      color: @h1-color;
+      text-transform: @h1-text-transform;
+      border: @h1-border;
+    }
+
+  h2 {
+    font: @h2-font;
+    color: @h2-color;
   }
-  textarea {
-    resize: none;
-  }
-  .editor {
-    height: 100%;
-    width: 100%;
-    background: @edit-background;
-    box-shadow: inset 0 0 6px black;
-  }
-  input {
-    background-color: @edit-background;
-    box-shadow: inset 0 0 3px black;
-    color: @core-main-color;
-  }
-  input:focus {
-    background-color: @editactive-background;
-  }
-  select {
-    background-color: @edit-background;
-    box-shadow: inset 0 0 3px black;
-    height: 1.5em;
-    color: @core-main-color;
-  }
-  form {
-    display: flex;
-    flex-direction: row;
-  }
-  .right-icon {
-    margin-left: auto;
+    textarea {
+      resize: none;
+    }
+    .editor {
+      height: 100%;
+      width: 100%;
+      background: @edit-background;
+      box-shadow: inset 0 0 6px black;
+    }
+    input {
+      background-color: @edit-background;
+      box-shadow: inset 0 0 3px black;
+      color: @core-main-color;
+    }
+    input:focus {
+      background-color: @editactive-background;
+    }
+    select {
+      background-color: @edit-background;
+      box-shadow: inset 0 0 3px black;
+      height: 1.5em;
+      color: @core-main-color;
+    }
+    form {
+      display: flex;
+      flex-direction: row;
+    }
+    .right-icon {
+      margin-left: auto;
+    }
   }
   .main {
     display: flex;
