--- a/less/chat/rollDialog.less
+++ b/less/chat/rollDialog.less
@@ -1,74 +1,89 @@
-  .cem-dialog {
-    background-color: @clear-background;
+.cem-dialog {
+  background-color: @clear-background;
+  display: flex;
+  flex-direction: column;
+  font: @dialog-font;
+  color: black;
+  .tooltip {
+    position: relative;
+    display: inline-block;
+  }
+  .intro {
     display: flex;
-    flex-direction: column;
-    font: @dialog-font;
-    .tooltip {
-      position: relative;
-      display: inline-block;
+    flex-direction: row;
+    justify-content: center;
+    .introImg {
+      border: none;
+      padding: 5px;
+      width: 120px;
+      height: 120px;
+      object-fit: contain;
+      object-position: center;
+      align-self: center;
     }
-    .intro {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      .introImg {
-        border: none;
-        padding: 5px;
-        width: 120px;
-        height: 120px;
-        object-fit: contain;
-        object-position: center;
-        align-self: center;
-      }
-      .introtext {
-        font: @dialog-intro-font;
-        margin: 0.5em;
-        padding-top: 1.5em;
-        text-align: center;
-      }
-    }
-    .formula {
-      text-align: center;
+    .introtext {
+      font: @dialog-intro-font;
       margin: 0.5em;
-      font: @dialog-formula-font;
-    }
-    .rollmodifier {
-      display: flex;
-      flex-direction: row;
-      margin: 0 0 1em 1em;
-      input {
-        width: 5em;
-        margin: 0 0 1em 1em;
-      }
-      select {
-        width: 5em;
-        margin: 0 0 1em 1em;
-      }
-    }
-    .paddingend {
-      padding: 0 0 5em 0;
-    }
-    .bonus-label {
-      font: @dialog-bonus-label-font;
-    }
-    .bonus {
-      h2 {
-        font-weight: bold;
-      }
-    }
-    table {
-      table-layout: fixed;
-      width: 100%;
-      border-collapse: collapse;
-    }
-    td {
-      width: 25%;
-      input {
-        width: 2em;
-      }
-      input[type="number"]::-webkit-inner-spin-button,
-      input[type="number"]::-webkit-outer-spin-button {
-        -webkit-appearance: auto;
-      }
+      padding-top: 1.5em;
+      text-align: center;
     }
   }
+  .formula {
+    text-align: center;
+    margin: 0.5em;
+    font: @dialog-formula-font;
+  }
+  .rollmodifier {
+    display: flex;
+    flex-direction: row;
+    margin: 0 0 1em 1em;
+    input {
+      width: 5em;
+      margin: 0 0 1em 1em;
+      color: black;
+      background: rgba(0, 0, 0, 0.1);
+    }
+    select {
+      width: 5em;
+      margin: 0 0 1em 1em;
+      color: black;
+      background: rgba(0, 0, 0, 0.1);
+    }
+  }
+  .heroismmodifier {
+    input {
+      width: 1em;
+    }
+  }
+  .paddingend {
+    padding: 0 0 5em 0;
+  }
+  .bonus-label {
+    font: @dialog-bonus-label-font;
+  }
+  .bonus {
+    h2 {
+      margin: 10px 0px 0px 10px;
+      font-weight: bold;
+      color: black;
+    }
+  }
+  table {
+    table-layout: fixed;
+    width: 100%;
+    border-collapse: collapse;
+    background: none;
+  }
+  td {
+    width: 25%;
+    input {
+      width: 3em;
+      color: black;
+      background: rgba(0, 0, 0, 0.1);
+    }
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button {
+      -webkit-appearance: auto;
+    }
+  }
+}
