--- a/templates/chat/roll-dialog.hbs
+++ b/templates/chat/roll-dialog.hbs
@@ -9,13 +9,14 @@
       <div class="formula" data-tooltip="{{formulaTooltip}}">{{rollFormula}}</div>
     </div>
     <div class="rollmodifier">
-      <label>{{localize "CLEENMAIN.dialog.rollmodifier"}}</label><input id="rollmodifier" value="" type="text" data-dtype="Text" />
+      <label>{{localize "CLEENMAIN.dialog.rollmodifier"}}</label>
+      <input class="modifierChange" data-field="modifierChange" name="modifier" type="number" value="" />
     </div>
 
     {{#ifn skillRoll}}
     <div class="rollmodifier">
       <label>{{localize "CLEENMAIN.dialog.damageBonus"}}</label>
-      <select id="damageBonus">
+      <select class="damageBonus">
         <option value="0" default></option>
         <option value="1">1d6</option>
         <option value="2">2d6</option>
@@ -27,11 +28,13 @@
     {{#ifn damageRoll}}
       {{#if isPlayer}}
         {{#if hasHeroism}}
-        <div class="rollmodifier">
+        <div class="heroismmodifier">
           {{#if hasBiotech}}
-          <label>{{#if heroismBonus1d6}}{{localize "CLEENMAIN.dialog.biotechBonus1d6"}}{{else}}{{localize "CLEENMAIN.dialog.biotech"}}{{/if}}</label><input type="checkbox" id="heroism" />
+          <label>{{#if heroismBonus1d6}}{{localize "CLEENMAIN.dialog.biotechBonus1d6"}}{{else}}{{localize "CLEENMAIN.dialog.biotech"}}{{/if}}</label>
+          <input class="heroism" data-field="heroism" name="heroism" type="checkbox" />
           {{else}}
-          <label>{{#if heroismBonus1d6}}{{localize "CLEENMAIN.dialog.heroismBonus1d6"}}{{else}}{{localize "CLEENMAIN.dialog.heroism"}}{{/if}}</label><input type="checkbox" id="heroism" />
+          <label>{{#if heroismBonus1d6}}{{localize "CLEENMAIN.dialog.heroismBonus1d6"}}{{else}}{{localize "CLEENMAIN.dialog.heroism"}}{{/if}}</label>
+          <input class="heroism" data-field="heroism" name="heroism" type="checkbox" />
           {{/if}}
         </div>
         {{/if}}
@@ -40,7 +43,8 @@
   
     {{#ifn attackRoll}}
         <div class="roll rollmodifier">
-          <label>{{localize "CLEENMAIN.dialog.nbReroll"}}</label><input type="number" id="nbReroll" name="nbReroll" min="0" max="10" value="0" />
+          <label>{{localize "CLEENMAIN.dialog.nbReroll"}}</label>
+          <input type="number" class="nbReroll" name="nbReroll" min="0" max="10" value="0" />
         </div>
     {{/ifn}}
 
@@ -52,22 +56,27 @@
       <tr>
         <td class="tooltip bonus-label" data-tooltip="{{localize "CLEENMAIN.bonus.lethalattack.description"}}">{{localize "CLEENMAIN.bonus.lethalattack.label"}}
         </td>
-        <td><input type="number" id="lethalattack" name="lethalattack" min="0" max="10" value="0" /></td>
+        <td>
+          <input type="number" class="lethalattack" name="lethalattack" min="0" max="10" value="0" />
+        </td>
         <td class="tooltip bonus-label" data-tooltip="{{localize
             "CLEENMAIN.bonus.multipleattacks.description"}}">
           {{localize "CLEENMAIN.bonus.multipleattacks.label"}}</td>
-        <td><input type="number" id="multipleattacks" name="multipleattacks" min="0" max="1" value="0" />
+        <td>
+          <input type="number" class="multipleattacks" name="multipleattacks" min="0" max="1" value="0" />
         </td>
       </tr>
       <tr>
         <td class="tooltip bonus-label" data-tooltip="{{localize "CLEENMAIN.bonus.efficiency.description"}}">
           {{localize "CLEENMAIN.bonus.efficiency.label"}}</td>
-        <td><input type="number" id="efficiency" name="efficiency" min="0" max="10" value="0" />
+        <td>
+          <input type="number" class="efficiency" name="efficiency" min="0" max="10" value="0" />
         </td>
         <td class="tooltip bonus-label" data-tooltip="{{localize
             "CLEENMAIN.bonus.caution.description"}}">
           {{localize "CLEENMAIN.bonus.caution.label"}}</td>
-        <td><input type="number" id="caution" name="caution" min="0" max="10" value="0" />
+        <td>
+          <input type="number" class="caution" name="caution" min="0" max="10" value="0" />
         </td>
       </tr>
       {{#if (isSettingEnabled "advancedRules")}}
@@ -75,7 +84,8 @@
         <td class="tooltip bonus-label" data-tooltip="{{localize
             "CLEENMAIN.bonus.quick.description"}}">
           {{localize "CLEENMAIN.bonus.quick.label"}}</td>
-        <td><input type="number" id="quick" name="quick" min="0" max="1" value="0" />
+        <td>
+          <input type="number" class="quick" name="quick" min="0" max="1" value="0" />
         </td>
         <td class="tooltip"></td>
         <td></td>
@@ -90,24 +100,28 @@
         <td class="tooltip bonus-label" data-tooltip="{{localize
             "CLEENMAIN.penalty.minorinjury.description"}}">{{localize "CLEENMAIN.penalty.minorinjury.label"}}
         </td>
-        <td><input type="number" id="minorinjury" name="minorinjury" min="0" max="1" value="0" />
+        <td>
+          <input type="number" class="minorinjury" name="minorinjury" min="0" max="1" value="0" />
         </td>
         <td class="tooltip bonus-label" data-tooltip="{{localize
             "CLEENMAIN.penalty.danger.description"}}">{{localize "CLEENMAIN.penalty.danger.label"}}
         </td>
-        <td><input type="number" id="danger" name="danger" min="0" max="10" value="0" />
+        <td>
+          <input type="number" class="danger" name="danger" min="0" max="10" value="0" />
         </td>
       </tr>
       <tr>
         <td class="tooltip bonus-label" data-tooltip="{{localize
             "CLEENMAIN.penalty.difficulty.description"}}">{{localize "CLEENMAIN.penalty.difficulty.label"}}
         </td>
-        <td><input type="number" id="difficulty" name="difficulty" min="0" max="10" value="{{action.difficulty}}" />
+        <td>
+          <input type="number" class="difficulty" name="difficulty" min="0" max="10" value="{{action.difficulty}}" />
         </td>
         <td class="tooltip bonus-label" data-tooltip="{{localize
             "CLEENMAIN.penalty.risk.description"}}">{{localize "CLEENMAIN.penalty.risk.label"}}
         </td>
-        <td><input type="number" id="risk" name="risk" min="0" max="1" value="{{action.risk}}" /></td>
+        <td>
+          <input type="number" class="risk" name="risk" min="0" max="1" value="{{action.risk}}" /></td>
       </tr>
   
       {{#if (isSettingEnabled "advancedRules")}}
@@ -115,9 +129,8 @@
         <td class="tooltip bonus-label" data-tooltip="{{localize
             "CLEENMAIN.penalty.slowness.description"}}">{{localize "CLEENMAIN.penalty.slowness.label"}}
         </td>
-        <td><input type="number" id="slowness" name="slowness" min="0" max="10" value="0" />
-  
-        </td>
+        <td>
+          <input type="number" class="slowness" name="slowness" min="0" max="10" value="0" /></td>
         <td class="tooltip"></td>
         <td></td>
       </tr>
