--- a/less/item-sheet.less
+++ b/less/item-sheet.less
@@ -1,6 +1,7 @@
 .cleenmain.sheet.item {
   .window-content {
     background: @itemsheet-background;
+    background-size: 100% auto;
     background-color: @clear-background;
     font: @default-font;
     h1 {
