--- a/cleenmain.css
+++ b/cleenmain.css
@@ -199,6 +199,7 @@
   display: flex;
   flex-direction: row;
   font-size: 1, 5em;
+  border-top: 0px;
 }
 .cleenmain.sheet.player .main .central .tab-name {
   background: #fffdfc;
@@ -510,6 +511,7 @@
 }
 .cleenmain.sheet.item .window-content {
   background: repeat url('../../../ui/parchment-white.jpg');
+  background-size: 100% auto;
   background-color: #fffdfc;
   font: 1.1rem "Modesto condensed";
 }
