--- a/less/player-sheet.less
+++ b/less/player-sheet.less
@@ -186,6 +186,7 @@
         display: flex;
         flex-direction: row;
         font-size: 1, 5em;
+        border-top:0px;
       }
 
       .tab-name {
