--- a/templates/sheets/parts/unlock-icon.hbs
+++ b/templates/sheets/parts/unlock-icon.hbs
@@ -1,4 +1,4 @@
-<div class="change-lock" data-action="toggleLockMode" title="{{localize 'CLEENMAIN.LABEL.unlockSheet'}}">
+<div class="change-lock" data-action="toggleLockMode" title="{{localize 'CLEENMAIN.label.unlockSheet'}}">
   <a>
     {{#if unlocked}}<i class="fas fa-lock-open"></i>
     {{else}}<i class="fas fa-lock" ></i>
